[package]
name = "ble_bled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.11", features = ["serde"] }
hex="0.4"
itertools = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
pretty_env_logger = "0.5"
serde = "1.0"
uuid = { version = "1.6.1", features = ["v4"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }